# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:build_flavors.bzl", "flavors")

[
    rust_library(
        name = "public_api{}".format(flavor.suffix),
        srcs = ["src/lib.rs"],
        crate_features = flavor.features,
        crate_name = "public_api",
        visibility = ["//visibility:public"],
        deps = [
            ":interceptor",
            "//enforcer:manifest_rust",
            "//enforcer/data_scope",
            "//enforcer/health:health_manager{}".format(flavor.suffix),
            "//enforcer/error:ez_error",
            "//enforcer/error:ez_error_trait",
            "//enforcer/isolate:isolate_info",
            "//enforcer/isolate:isolate_service_mapper",
            "//enforcer/junction",
            "//enforcer/junction:junction_trait",
            "//enforcer/metrics",
            "//enforcer/v1:data_scope_rust",
            "//enforcer/v1:enforcer_rust",
            "//enforcer/v1:ez_service_rust",
            "//enforcer/v1:payload_rust",
            "//simple_tonic_stream",
            "@crates//:anyhow",
            "@crates//:async-stream",
            "@crates//:dashmap",
            "@crates//:futures",
            "@crates//:hyper-util",
            "@crates//:log",
            "@crates//:opentelemetry",
            "@crates//:prost",
            "@crates//:tokio",
            "@crates//:tokio-stream",
            "@crates//:tonic",
            "@crates//:tower",
            "@crates//:tracing",
        ],
    )
    for flavor in flavors
]

rust_library(
    name = "interceptor",
    srcs = ["src/interceptor.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer:manifest_rust",
        "//enforcer/isolate:isolate_info",
        "//enforcer/isolate:isolate_service_mapper",
        "//enforcer/v1:ez_service_rust",
        "@crates//:anyhow",
        "@crates//:tokio",
    ],
)

rust_test(
    name = "public_api_tests",
    size = "small",
    srcs = ["test/public_api_tests.rs"],
    deps = [
        ":interceptor",
        ":public_api",
        "//enforcer:manifest_rust",
        "//enforcer/container/manager:container_manager_requester",
        "//enforcer/data_scope",
        "//enforcer/error:ez_error",
        "//enforcer/health:health_manager",
        "//enforcer/isolate:isolate_info",
        "//enforcer/isolate:isolate_service_mapper",
        "//enforcer/junction:junction_test_utils",
        "//enforcer/metrics",
        "//enforcer/state:state_manager",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:error_detail_rust",
        "//enforcer/v1:ez_service_rust",
        "//enforcer/v1:google_rpc_error_details_rust",
        "//enforcer/v1:payload_rust",
        "//simple_tonic_stream",
        "@crates//:anyhow",
        "@crates//:async-stream",
        "@crates//:dashmap",
        "@crates//:googleapis-tonic-google-rpc",
        "@crates//:hyper-util",
        "@crates//:log",
        "@crates//:prost",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)

rust_test(
    name = "interceptor_test",
    size = "small",
    srcs = ["test/interceptor_test.rs"],
    deps = [
        ":interceptor",
        "//enforcer:manifest_rust",
        "//enforcer/isolate:isolate_info",
        "//enforcer/isolate:isolate_service_mapper",
        "//enforcer/v1:ez_service_rust",
        "@crates//:anyhow",
        "@crates//:tokio",
    ],
)

rust_test(
    name = "public_api_metrics_test",
    size = "small",
    srcs = ["test/public_api_metrics_test.rs"],
    deps = [
        ":interceptor",
        ":public_api",
        "//enforcer:manifest_rust",
        "//enforcer/container/manager:container_manager_requester",
        "//enforcer/data_scope",
        "//enforcer/health:health_manager",
        "//enforcer/isolate:isolate_info",
        "//enforcer/isolate:isolate_service_mapper",
        "//enforcer/junction:junction_test_utils",
        "//enforcer/metrics",
        "//enforcer/metrics:metrics_test",
        "//enforcer/state:state_manager",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "//enforcer/v1:ez_service_rust",
        "//enforcer/v1:payload_rust",
        "//simple_tonic_stream",
        "@crates//:anyhow",
        "@crates//:async-stream",
        "@crates//:dashmap",
        "@crates//:fake-opentelemetry-collector",
        "@crates//:futures",
        "@crates//:hyper-util",
        "@crates//:log",
        "@crates//:prost",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)
