# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "state_manager",
    srcs = glob(["src/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/container/manager:container_manager_request",
        "//enforcer/container/manager:container_manager_requester",
        "//enforcer/data_scope",
        "//enforcer/isolate:isolate_info",
        "//enforcer/v1:enforcer_rust",
        "@crates//:anyhow",
        "@crates//:dashmap",
        "@crates//:log",
        "@crates//:thiserror",
        "@crates//:tokio",
    ],
)

rust_test(
    name = "state_manager_test",
    size = "small",
    srcs = glob(["test/*.rs"]),
    deps = [
        ":state_manager",
        "//enforcer/container/manager:container_manager_request",
        "//enforcer/container/manager:container_manager_requester",
        "//enforcer/data_scope",
        "//enforcer/isolate:isolate_info",
        "//enforcer/v1:data_scope_rust",
        "//enforcer/v1:enforcer_rust",
        "@crates//:once_cell",
        "@crates//:tokio",
    ],
)
