# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//enforcer:__subpackages__"])

rust_library(
    name = "traces",
    srcs = ["src/lib.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/grpc_connector",
        "@crates//:anyhow",
        "@crates//:opentelemetry",
        "@crates//:opentelemetry-otlp",
        "@crates//:opentelemetry_sdk",
        "@crates//:tracing",
        "@crates//:tracing-opentelemetry",
        "@crates//:tracing-subscriber",
    ],
)

rust_test(
    name = "traces_test",
    size = "small",
    srcs = ["test/traces_test.rs"],
    deps = [
        ":traces",
        "@crates//:fake-opentelemetry-collector",
        "@crates//:tokio",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "traces_uds_test",
    size = "small",
    srcs = ["test/traces_uds_test.rs"],
    deps = [
        ":traces",
        "@crates//:fake-opentelemetry-collector",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tracing",
    ],
)
