# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@oak//bazel:defs.bzl", "oci_runtime_bundle")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "main",
    srcs = ["main.rs"],
    deps = [
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:memmap2",
        "@crates//:ping",
        "@crates//:rand",
        "@crates//:sha2",
    ],
)

pkg_tar(
    name = "test_binary",
    srcs = [":main"],
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "test_image",
    base = "@isolate_runtime_ubuntu_base",
    tars = [":test_binary"],
)

oci_runtime_bundle(
    name = "test_bundle",
    image = ":test_image",
)
