# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "build_service",
    srcs = glob(["src/*.rs"]),
    deps = [
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:env_logger",
        "@crates//:log",
        "@crates//:regex",
        "@crates//:rmcp",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tonic",
    ],
)

rust_binary(
    name = "server",
    srcs = ["server.rs"],
    deps = [
        ":build_service",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:env_logger",
        "@crates//:log",
        "@crates//:regex",
        "@crates//:rmcp",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
)

# This rule has to be executed from the repo root.
# TODO: move the rule to repo root once the mcp server works well enough
genrule(
    name = "pkg-mcp",
    outs = ["pkg-mcp.bin"],
    cmd_bash = """cat << EOF > '$@'
tools/mcp/server/update_mcp_server "\\$$@"
EOF""",
    executable = True,
    local = True,
    message = "Package the mcp server executable from the latest code",
)
