# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "build_service",
    srcs = glob(["src/*.rs"]),
    deps = [
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:env_logger",
        "@crates//:log",
        "@crates//:regex",
        "@crates//:rmcp",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tonic",
    ],
)

rust_binary(
    name = "server",
    srcs = ["server.rs"],
    deps = [
        ":build_service",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:env_logger",
        "@crates//:log",
        "@crates//:regex",
        "@crates//:rmcp",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
)

genrule(
    name = "install",
    srcs = [
        ":ez-build-fix.toml",
        ":server",
    ],
    outs = ["install-ez-mcp.bin"],
    cmd_bash = """cat <<EOF >'$@'
mkdir -p {dir}
cp -f "$(execpath :server)" "{dir}/ez-mcp"
cp -f "$(execpath :ez-build-fix.toml)" "{dir}"
chmod 755 "{dir}/ez-mcp"
EOF""".format(dir = "tools/mcp/ez-mcp"),
    executable = True,
    local = True,
    message = "installing ez-mcp",
)
